feat: the Java / Kotlin section of the catalogue is filled by a study, and a JVM project's coverage reads its Maven and Gradle manifests
JUnit Jupiter (kotest when the project is written in Kotlin), cucumber-jvm, jqwik
(kotest-property when the project runs kotest), pitest, JaCoCo (kover for Kotlin on Gradle),
ArchUnit, checkstyle with PMD (detekt with ktlint for Kotlin), SpotBugs with findsecbugs and
OWASP dependency-check, swagger-request-validator, JMH, Mockito (MockK for Kotlin). The JVM
tree gathers the artifactIds of pom.xml, the coordinates and plugin ids of the Gradle build
files and of the version catalogue, the files under src/test, and the CI files; the
technology is java/kotlin whichever the build tool. Every section of the catalogue is now
filled and E50 is closed.